# CyrodiilMP

./: .gitignore  .gitmodules  LICENSE  NOTICE.md  README.md  game-path.example.txt
client/CyrodiilMP.ClientBridge/: CyrodiilMP.ClientBridge.csproj  Program.cs
dashboard/CyrodiilMP.Dashboard/: Program.cs
dashboard/CyrodiilMP.Dashboard/wwwroot/: app.js  index.html  styles.css
docs/: ASSET_AND_RUNTIME_INSPECTION.md  BUILD_AND_BRIDGE.md  DASHBOARD.md  MVP.md  NATIVE_GAMECLIENT.md  NATIVE_GAMEHOST.md  PROJECT_STRUCTURE.md  REPOSITORY_ORGANIZATION.md  STANDALONE_LOADER.md  TOOLS.md  UE4SS_RESEARCH.md  UI_PLATFORM_INTEGRATION.md
game-plugin/UE4SS/Mods/: README.md
game-plugin/UE4SS/Mods/CyrodiilMP_AutoUSMAP/Scripts/: main.lua
game-plugin/UE4SS/Mods/CyrodiilMP_ConnectButtonPrototype/: README.md
game-plugin/UE4SS/Mods/CyrodiilMP_ConnectButtonPrototype/Scripts/: main.lua
game-plugin/UE4SS/Mods/CyrodiilMP_GameClientBootstrap/: README.md
game-plugin/UE4SS/Mods/CyrodiilMP_GameClientBootstrap/Scripts/: main.lua
game-plugin/UE4SS/Mods/CyrodiilMP_MultiplayerPrototype/Scripts/: main.lua
game-plugin/UE4SS/Mods/CyrodiilMP_RuntimeInspector/Scripts/: main.lua
game-plugin/UI/cyrodiilmp/: app.js  index.html  main-menu-button.css  main-menu-button.html  main-menu-button.js  styles.css
native/: CMakeLists.txt  CMakePresets.json
native/CyrodiilMP.AutoLoader/: CMakeLists.txt
native/CyrodiilMP.AutoLoader/src/: VersionProxy.cpp  version_proxy.def
native/CyrodiilMP.Bootstrap/: CMakeLists.txt
native/CyrodiilMP.Bootstrap/src/: Bootstrap.cpp  Bootstrap.hpp  DebugConsole.cpp  DebugConsole.hpp  DllMain.cpp  Log.cpp  Log.hpp  PatternScanner.cpp  PatternScanner.hpp  Settings.cpp  Settings.hpp  UEBridge.cpp  UEBridge.hpp  UEPatterns.cpp  UEPatterns.hpp  UiRuntime.cpp  UiRuntime.hpp
native/CyrodiilMP.GameClient/: CMakeLists.txt
native/CyrodiilMP.GameClient/include/CyrodiilMP/: GameClientApi.h
native/CyrodiilMP.GameClient/src/: CommandWatcher.cpp  CommandWatcher.hpp  DllMain.cpp  GameClient.cpp  Log.cpp  Log.hpp  NetworkClient.cpp  NetworkClient.hpp
native/CyrodiilMP.GameClient/tools/: GameClientHost.cpp
native/CyrodiilMP.GameHost/: CMakeLists.txt  dllmain.cpp
native/CyrodiilMP.GameHost/include/: GameHostMod.hpp  ScriptingHost.hpp
native/CyrodiilMP.GameHost/src/: BridgeLauncher.cpp  BridgeLauncher.hpp  ButtonInjector.cpp  ButtonInjector.hpp  GameHostMod.cpp  HookManager.cpp  HookManager.hpp  ScriptingHost.cpp  UiRuntime.cpp  UiRuntime.hpp
native/CyrodiilMP.Launcher/: CMakeLists.txt
native/CyrodiilMP.Launcher/src/: main.cpp
research/: README.md
research/runs/20260427-233517-smoke-test/: notes.md
research/runs/20260427-234539-manual/: notes.md
research/runs/20260428-003806-manual/: notes.md
research/runs/20260428-132322-manual/: notes.md
research/runs/20260428-132807-manual/: notes.md
research/runs/20260428-132811-manual/: notes.md
research/runs/20260428-132915-manual/: notes.md
research/runs/20260428-132917-manual/: notes.md
research/runs/20260428-133031-wrapper-test/: notes.md
research/runs/20260428-133053-manual/: notes.md
research/runs/20260428-133325-visible-output-test/: README.md  notes.md  status.txt
scripts/: CyrodiilMP.Helpers.psm1  README.md  analyze-runtime-dump.cmd  analyze-runtime-dump.ps1  audit-repo-layout.cmd  audit-repo-layout.ps1  build-native.cmd  build-native.ps1  build-nirnlab-uiplatformor.cmd  build-nirnlab-uiplatformor.ps1  build-ue4ss.cmd  build-ue4ss.ps1  build.cmd  check-ue4ss-cpp-template.cmd  check-ue4ss-cpp-template.ps1  collect-runtime-dumps.cmd  collect-runtime-dumps.ps1  fix-ue4ss-gui.cmd  fix-ue4ss-gui.ps1  full-research.cmd  full-research.ps1  index-fmodel-export.cmd  index-fmodel-export.ps1  install-auto-usmap-dumper.cmd  install-auto-usmap-dumper.ps1  install-cyrodiilmp-ue4ss-mods.cmd  install-cyrodiilmp-ue4ss-mods.ps1  install-standalone-loader.cmd  install-standalone-loader.ps1  install-ue4ss-runtime.cmd  install-ue4ss-runtime.ps1  new-research-run.cmd  new-research-run.ps1  open-fmodel.cmd  open-fmodel.ps1  publish-client-bridge.cmd  quick-scan.cmd  quick-scan.ps1  run-client-bridge.cmd  run-client-bridge.ps1  (+22 more)
server/CyrodiilMP.Server/: CyrodiilMP.Server.csproj  NativeUdpSidecar.cs  Program.cs
shared/: protocol-notes.md
shared/CyrodiilMP.Protocol/: CyrodiilProtocol.cs
tests/CyrodiilMP.NetProbe/: CyrodiilMP.NetProbe.csproj  Program.cs
tools/: README.md
